# advent-of-code-2022

./: 01.py  02.py  03.py  04.py  05.py  07.py  08.py  09.py  10.py  11.py  13.py  14.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  Cargo.toml  README.md  crates  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  (+9 more)
2022/: Cargo.toml
inputs/: 05_s.txt  05_st.txt  05_stacks.txt
