[workspace]
members = [
    "2022",
    "aoc_prelude/crates/*",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
arrayvec = "0.7.4"
deku = "0.16.0"
hashbrown = "0.14.3"
hex = "0.4.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
multimap = { version = "0.10.0", default-features = false }
num-iter = "0.1.44"
num-traits = "0.2.18"
pest = { version = "2.7.9", default-features = false }
pest_derive = "2.7.9"
rayon = "1.10"
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl"] }

[profile.release]
lto = "fat"
incremental = false
debug = 0
