[workspace]
members = [
    "2022",
    "aoc_prelude/crates/*",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
arrayvec = "0.7.6"
deku = "0.18.1"
hashbrown = "0.15.0"
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1.5.0"
multimap = { version = "0.10.0", default-features = false }
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-traits = "0.2.19"
pest = { version = "2.7.13", default-features = false }
pest_derive = "2.7.13"
rayon = "1.10"
regex = { version = "1.11", default-features = false, features = ["std", "unicode-perl"] }

[profile.release]
lto = "fat"
incremental = false
debug = 0
