[package]
name = "aoc_2022"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_2dmap = { path = "../crates/aoc_2dmap" }
aoc_dijsktra = { path = "../crates/aoc_dijsktra" }
aoc_prelude = { path = "../crates/aoc_prelude" }
deku = "0.15.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = { version = "1.5", default-features = false, features = ["std", "unicode-perl"] }

[[bin]]
name = "day12"
path = "src/bin/day12.rs"
