[package]
name = "aoc_2022"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_2dmap = { path = "../aoc_prelude/crates/aoc_2dmap" }
aoc_dijsktra = { path = "../aoc_prelude/crates/aoc_dijsktra" }
aoc_prelude = { path = "../aoc_prelude/crates/aoc_prelude" }
ahash.workspace = true
deku.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
rayon.workspace = true

[[bin]]
name = "day12"
path = "src/bin/day12.rs"

[[bin]]
name = "day19"
path = "src/bin/day19.rs"

[[bin]]
name = "day24"
path = "src/bin/day24.rs"

